truncate draggable blocks to prevent word wrap

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -7,3 +7,9 @@
 .active-icon{
     vertical-align: middle;
 }
+
+.title-blocks{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
